# dr-indigo

./: .gitignore  README.md  docker-compose.yml
infra/: README.MD  main.bicep  main.bicepparam
infra/modules/hostLayer/: app.bicep  environment.bicep  identity.bicep  registry.bicep
infra/modules/memory/: cosmos.bicep
infra/modules/monitor/: law.bicep
infra/modules/networking/: nat.bicep  nsg.bicep  vnet.bicep
infra/modules/search/: ai-search.bicep
infra/modules/storage/: storage-account.bicep
src/backend/: rag.py
src/client/dr-indigo/: .dockerignore  .env.sample  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml
src/client/dr-indigo/app/: feedback.js  globals.css  layout.js  page.js
src/client/dr-indigo/app/api/copilotkit/: route.ts
src/client/dr-indigo/app/api/feedback/: route.ts
src/eval/: README.md  local_evaluation.py  quick_test.py  requirements.txt
src/server/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  joint_surgery_info_agent.py  main.py  medical_emergency_agent.py  medical_guidance_agent.py  medical_triage_agent.py  memory_helper.py  patient_authentication_agent.py  pyproject.toml  rag_mcp.py  requirements.txt  search_tool.py  settings.py  telemetry.py  workflow.py  workflow_agent_adapter.py
src/server/.devcontainer/: README.md  devcontainer.json  verify-setup.sh
src/server/agents/: care_navigator_agent.py  joint_surgery_info_agent.py  medical_triage_agent.py  memory_agent.py
src/server/eval/: README.md  langfuse_evaluation.py  local_evaluation.py  questions_answers.csv
src/server/knowledge/: joint_replacement_guide_layout.md
src/server/tools/: ai_search_tool.py  cosmos_message_store.py  file_search.py  search_medical_guidance.py
